# patchyx

./: .ignore  Cargo.nix  Cargo.toml  README.md  flake.nix  oldshell.nix
.pijul/changes/22/: JKXA5HCKPQBCDC3ETID7RGF62ARWX7RRQ72HEZXZ36IZLWVOWQC.change
.pijul/changes/23/: LVKATNTT74YKHG7KJM6SBO2IVZEV24TQ46ZJIHQ2IXONWNVXJAC.change  OFHED65KP272FJAYMST42OG7Z7NPAS6F3MUSQLO43B7EQ6GLWQC.change
.pijul/changes/24/: 6V5TYIUL7CFN7G5Y7A35EEM6IJPN532ROEYVSM7Q4HCQSWPDBQC.change
.pijul/changes/26/: VQKD254I5DSCJY6IBALOI6IV6OAEKSBU67MOLX3EHNRJCMQZ4AC.change
.pijul/changes/27/: PYHR6LO4M4RMSMLVMUKSYNQ72V6RRMRXLYQI3JA3LBHJO747YAC.change  RZYCM3XP72CW7FYGE373YAFD6EEZOZ4YAHEKV6JE5L6Z5N3JNAC.change
.pijul/changes/2B/: 7KNPCMUA2NJQUHDFKPAMXQWRPSC2T2VARLZDPJGJGQVGMBPLOQC.change  KYJ2JM5PTXWO6HTVBKFQANWWSCJ4UHJYKAXWGTVZB35AZJ76CQC.change
.pijul/changes/2C/: NY6KTCQKVDDTAWPROHTDEW2SRUZAUJRYMLICQMVJXRVXUMZ7JAC.change
.pijul/changes/2D/: 7P2VKJASU7QDQZHGCLBIT6G2V5WUFYLWTCEVVEI2EZHGM6XYRAC.change
.pijul/changes/2F/: ZSXUGKG4F3ARCC6J5A5VUWPULYG22U3E5WNIUJJNCTD3ZVUHQQC.change
.pijul/changes/2G/: NO2PLCZ3BM5RRRSPLGVWEWHOOTVT4VKFBNNQMUKOKF3VXL3ZFQC.change  QCLJZGIXMTKDVMYIIQJDOR5EXGBZS5FKH2S4DTN25WKKBUMQQQC.change
.pijul/changes/2K/: 7JLB4Z7BS5VFNWD4DO3MKYU7VNPA5MTVHVSDI3FQZ5ICM6XM6QC.change  URKIFC6P62HW2TCV3N7IMCAARI7UBHYR5M3RIGWYLZU3X763AQC.change
.pijul/changes/2M/: KP7CB7FKQUNEAV3YPEJ7FNFW75VGGQIYPQRI54BFXGCUOQESPAC.change  LOE3FPVT4ZXC4L74VC7GV2IXATZQNFLJECDPZZ7MTSW4A6XT5QC.change
.pijul/changes/2R/: UJ4J7MBRP3N3FRDPS4CSSAXK6T6UWZAMS7RRDQSRNATERMPY4QC.change  XOCWUWOGHEKHT5W73LAHJSOZVRTOGS7BWLSIGEEEBJGMCZBXQAC.change
.pijul/changes/2T/: WREKSRQN3QBIIJQ6Q4T3RVBTKSYA5N6W4YBRMRWD22WWS3DGQAC.change  WWWCU4C3DLAECGKC43PYYVWC6DABSGKVXI25QZO5INZHVBZ5LAC.change
.pijul/changes/2U/: MXNSD5XADPYSQKSNF67ATKTAED6ANAS3P6MK6OZC3KEZJ6ZF7QC.change  TQVDLPXDC3QH5EAGGAC4M6CNZ6WZIMUOVP6DXF4KIR3CIU2U7QC.change
.pijul/changes/2V/: 33SO6IVPKBRPIJ3U3WYD6QKGN36BJVPP3M2YUDN7GTX3YH5UCAC.change  XTRPO4OML5A2RPI7SAEV5SJNOFIVS4TMYYG6TUUS5EXFMAPRJAC.change
.pijul/changes/32/: G3GOK752NTSULBH6KYGD3ZC2YC4B2X7O73G7BT3AJVMIUIFHXQC.change
.pijul/changes/33/: ANCTMFGDEI4CDYZCDERYDSWLL2UVXUVAX3GA75RY5VZWYMQSLQC.change  LXFADR7356GG6L6Q3RDCSXELOOKOICMMLNICIK7IXF2SDXDK3AC.change  SQMZYXPV2A3F7P6WBFKFO2BTQV6THSQXOLV3PCZASC6OTKVHTQC.change
.pijul/changes/34/: Q5U4HLC4ZEFTIEJY5EDNUJPTXLP7Y2TECHRI555QHUREBYBLPAC.change
.pijul/changes/35/: 2WW5FPLUBGEHM7W5WF7N7AMO56LPLL4WSR44VIPCSZVQRDLN4AC.change
.pijul/changes/36/: 7UBQ6KNAKUEWG32R4QRJ6H7IE7NAZFOPTC3ZOE4Z6E44RV3ISQC.change  PM475P5MEWULQM7TADWPLYGM5XX2NEXHXUW3NZVBGIPXPHSH5QC.change
.pijul/changes/3A/: MEP2Y5J6GA4AWQONF4JVA3XSR3ASLHHKMYG44R72SOUY3UQCDAC.change  ZB5NUOZ3PEP5RX2M2QKA4OVAF6AIXQZ6GH4D6W3JK7UFCLA2RQC.change
.pijul/changes/3C/: FU4DQNHPPJC2B63RSVAVGHTQZT3RT5CCHHYC4ZM6DQ4GVQULSQC.change
.pijul/changes/3E/: 2KY6Y4SQ2UO6PLA4K3MQKHIRHSQCBAJIPJT7NQ6BIETMAQX5QAC.change  MLWXLHXMGW2HO4WQLN67S6RN47OJXD5ZXETFLVM22IRX4TXRHQC.change
.pijul/changes/3F/: NRS6MWYYKFO2IX5WVUFIXKPSTRKQEHMPCYZVMNXGN33KWV2XNAC.change  TEGCMRMELPIJRUKNKRTA5TDBXEOTOOVRUTZJ7DWD27ZTKKMV3QC.change
.pijul/changes/3G/: 2QI42V6URCSNBAFU2EW3ISZMIVSQJXGFMVHFH7DCHU25UCSYSQC.change
.pijul/changes/3H/: 6Q5LDSFBPGDMEMR6A5LRNHQF3TIZKSLIBXUTGRIBZSJP65JCTAC.change
.pijul/changes/3I/: 4PAA2AW3VUTA3HLS2G4TQMWB7BO25DMCC7VWJHG6WMHCBHR6JAC.change
.pijul/changes/3J/: 6IK4W2BA4RJJQYXZOQFU4AQ3WJIM3TUXUNNBIQ6M6TS2JSHT6QC.change
.pijul/changes/3K/: HT2M5ZWBSXYFWZFL2Q5S4YFZKYFKOI5MAJT7WAIL5WPQ2YLLOAC.change  RGVQFUWFHPOGZOXVTJYNCM4XBRVYITAEOVPKBSAZ5GZIUO5KVQC.change
.pijul/changes/3M/: 7WBE24JTPTHWQOU5PO2ZJYKPKEH2F6R4M6RWIRFG334PQEA55QC.change  HUNYERBYLR5FOB7YJZINOFKXSXMLGBF5F6UR2MKNYYODIJIFGQC.change
.pijul/changes/3N/: ZS5KNWJU6JIOYVADDFJVJZM5LX5H7EWWKGZ4F2VAIATJCHGNBQC.change
.pijul/changes/3O/: F3DHLM6FGCN7GTKZUE5U5VL3HB3SCDAJ5AL3KD6MDVQ4VLJQUQC.change  PNBBAUOQ4AAENJ7YI7TCAQ5ZUVNMDPD2AN2KTL3KTOW5A2V6BAC.change  W3YNZXF6DR2EI5XS7PDHUUZMARDU2JUJFJKIEWXQNSMCIBVAOQC.change
.pijul/changes/3Q/: 24BC5L3CWCO3EY7RIHRDZARTJAP5LP4S2D3TJWCYB2762GHGAAC.change  GE6HRDSMTV2SNEDC2AJUIR6GIHRU73KXQMZ3BGUYT4H4TAMETQC.change  XUJMZDPH2EDJY6UXIRA5ZQK3GRS2R422S7CKN56I36O4POAQXQC.change
libpijul/: Cargo.toml
libpijul/src/: apply.rs  change.rs  fs.rs  key.rs  lib.rs  missing_context.rs  path.rs  record.rs  text_encoding.rs
libpijul/src/alive/: mod.rs  output.rs
libpijul/src/apply/: edge.rs  vertex.rs
libpijul/src/change/: parse.rs  text_changes.rs
libpijul/src/changestore/: filesystem.rs
libpijul/src/diff/: bin.rs  diff.rs  mod.rs  replace.rs  vertex_buffer.rs
libpijul/src/output/: archive.rs
libpijul/src/pristine/: edge.rs  mod.rs  sanakirja.rs  vertex.rs
libpijul/src/tests/: add_file.rs  change.rs  conflict.rs  diff.rs  file_conflicts.rs  missing_context.rs  mod.rs  rollback.rs  unrecord.rs
libpijul/src/unrecord/: mod.rs  working_copy.rs
libpijul/src/working_copy/: filesystem.rs  memory.rs  mod.rs
patchyx-server/: Cargo.toml
patchyx-server/src/: config.rs  error.rs  lib.rs  main.rs
patchyx-server/src/http/: middleware.rs  mod.rs  routes.rs
patchyx-server/src/ssh/: handler.rs  mod.rs  protocol.rs
pijul/: Cargo.toml
pijul-config/: Cargo.toml
pijul-config/src/: lib.rs
pijul-identity/: Cargo.toml
pijul-identity/src/: create.rs  lib.rs  load.rs  repair.rs
pijul-interaction/: Cargo.toml
pijul-interaction/src/: lib.rs
pijul-interaction/src/input/: mod.rs
pijul-interaction/src/progress/: terminal.rs
pijul-macros/: Cargo.toml
pijul-remote/: Cargo.toml
pijul-remote/src/: http.rs  lib.rs  local.rs  ssh.rs
pijul-repository/: Cargo.toml
pijul-repository/src/: lib.rs
pijul/src/: main.rs
pijul/src/commands/: apply.rs  archive.rs  change.rs  channel.rs  client.rs  clone.rs  common_opts.rs  credit.rs  debug.rs  dependents.rs  diff.rs  file_operations.rs  fork.rs  git.rs  identity.rs  init.rs  log.rs  mod.rs  protocol.rs  pushpull.rs  record.rs  reset.rs  status.rs  tag.rs  unrecord.rs
pijul/tests/: identity.rs
pijul/tests/common/: identity.rs  mod.rs
(+1087 files in other folders)
