[package]
name = "pijul-config"
description = "Configuration for the pijul version control system"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dialoguer = { workspace = true, features = ["editor"] }
dirs-next.workspace = true
log.workspace = true
serde_derive.workspace = true
serde.workspace = true
toml.workspace = true
whoami.workspace = true
