[package]
name = "pijul-remote"
description = "Functionality to communicate with a pijul repository remotely"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["openssl"]
openssl = ["thrussh-keys/openssl", "thrussh/openssl"]

[dependencies]
libpijul = { workspace = true, features = [ "tarball" ] }
pijul-config.workspace = true

anyhow.workspace = true
byteorder.workspace = true
bytes.workspace = true
dirs-next.workspace = true
futures-util.workspace = true
futures.workspace = true
keyring.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
sanakirja.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde.workspace = true
thrussh-config.workspace = true
thrussh-keys.workspace = true
thrussh.workspace = true
tokio.workspace = true
url.workspace = true
