[package]
name = "pijul-repository"
description = "Functionality for interacting with a pijul repository"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
libpijul.workspace = true
pijul-config.workspace = true

anyhow.workspace = true
log.workspace = true
rlimit.workspace = true
toml.workspace = true
